src/metrics/snapshots/big_code_analysis__metrics__nexits__tests__kotlin_multiple_returns.snap
---
source: src/metrics/nexits.rs
expression: metric.nexits
---
{
  "sum": 3,
  "average": 3.0,
  "min": 0,
  "max": 3
}
