src/metrics/snapshots/big_code_analysis__metrics__nexits__tests__kotlin_no_exit.snap
---
source: src/metrics/nexits.rs
expression: metric.nexits
---
{
  "sum": 0,
  "average": 0.0,
  "min": 0,
  "max": 0
}
