src/metrics/snapshots/big_code_analysis__metrics__nexits__tests__ruby_explicit_returns.snap
---
source: src/metrics/nexits.rs
expression: metric.nexits
---
{
  "sum": 2,
  "average": 2.0,
  "min": 0,
  "max": 2
}
